# code-canary

./: .dockerignore  .env.example  .gitignore  README.md
.github/: secrets.example
backend/: .dockerignore  .gitattributes  .gitignore  Dockerfile  build.gradle.kts  docker-entrypoint.sh  gradle.properties  settings.gradle.kts
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
local/: README.md  docker-compose.yml  docker-up.cmd  docker-up.py  docker-up.sh  (+1 more)
worker/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
worker/src/code_canary_worker/: __init__.py  cli.py  runner.py
worker/src/code_canary_worker/collector/: nvd_collector.py  osv_collector.py
worker/src/code_canary_worker/core/: job_errors.py  job_store.py  tasks.py
worker/src/code_canary_worker/loader/: nvd_loader.py  osv_loader.py
worker/src/code_canary_worker/refinery/: gold_refinery.py  silver_finalize.py  silver_refinery.py
worker/src/code_canary_worker/utils/: bronze_upsert.py  db_manager.py  ingestion_sync.py  job_cancellation.py  job_context.py  log_sanitize.py  path_safe.py  paths.py  progress_logger.py  silver_load_mode.py  staging_baselines.py  staging_constants.py  staging_manifest.py  staging_paths.py  staging_resolve.py  staging_validation.py  zip_entry.py
worker/tests/: test_bronze_upsert.py  test_db_manager.py  test_job_errors.py  test_log_sanitize.py  test_module_imports.py  test_nvd_collector.py  test_nvd_loader.py  test_osv_loader.py  test_path_safe.py  test_silver_refinery.py  test_staging_resolve.py
(+278 files in other folders)
